# buftest

./: .gitignore  CMakeLists.txt  buf.gen.yaml  buf.yaml  build.gradle  test.cc
.github/workflows/: pull-request.yaml
proto/: buf.yaml
proto/khiops/full/v101/: basics.proto  calls.proto
proto/khiops/v101/: basics.proto  calls.proto
proto/v2/khiops/simple/v101/: basics.proto  calls.proto
src/main/java/org/khiops/: KhiopsAPI.java  ScenarioConditional.java  ScenarioLine.java  ScenarioLoop.java  ScenarioSection.java  ScenarioTemplate.java
src/main/resources/templates/: trainpredictor.kht
src/test/java/: KhiopsTest.java
src/test/java/org/khiops/: KhiopsTest.java
